--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 	<header id="mainHeader">
-			<h1> Have you met us </h1>
+			<h1> Ensembled</h1>
 		</section>
 	</header>
 	<div id="mainWrap">
