--- a/index.html
+++ b/index.html
@@ -143,6 +143,8 @@
 		<script src="/js/jquery.cloudinary.js"></script>
 		<script src="/js/lodash.js"></script>
 		<script src="/js/jscrollpane.js"></script>
+		<script src="//cdn.jsdelivr.net/velocity/1.1.0/velocity.min.js"></script>		
+		<script src="//cdn.jsdelivr.net/velocity/1.1.0/velocity.ui.min.js"></script>
 		<script src="/js/lj.js"></script>
 	</body>
 	</html>
